--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "amazon-clone",
   "version": "0.1.0",
+  "homepage": "https://Krishna-Kant-Patel.github.io/Amazon-clone",
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.14.6",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
