--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amazon-clone",
   "version": "0.1.0",
-  "homepage": "https://Krishna-Kant-Patel.github.io/Amazon-clone",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.14.6",
